--- a/TikoTask.API/appsettings.Development.json
+++ b/TikoTask.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=TikoSql;User Id=postgres;Password=admin;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=postgres2;User Id=postgres;Password=admin;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
