--- a/TikoTask.API/TikoTask.API.csproj
+++ b/TikoTask.API/TikoTask.API.csproj
@@ -4,7 +4,17 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\daban\source\repos\TikoTask.API\TikoTask.API\TikoTask.API.xml</DocumentationFile>
+  </PropertyGroup>
+
+	<PropertyGroup>
+		<GenerateDocumantaionFile>true</GenerateDocumantaionFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+	</PropertyGroup>
+	
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
       <PrivateAssets>all</PrivateAssets>
