--- a/TikoTask.Business/TikoTask.Business.csproj
+++ b/TikoTask.Business/TikoTask.Business.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TikoTask.Data\TikoTask.Data.csproj" />
   </ItemGroup>
 
