--- a/TikoTask.Business/TikoTask.Business.csproj
+++ b/TikoTask.Business/TikoTask.Business.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.0.0" />
   </ItemGroup>
 
